--- a/AUTHORS
+++ b/AUTHORS
@@ -181,7 +181,7 @@ ScummVM Team
        David Corrales-Lopez  - Filesystem access improvements (GSoC 2007
                                task)
        Jerome Fisher         - MT-32 emulator
-       Jochen Hoenicke       - Speaker & PCjr sound support, Adlib work
+       Jochen Hoenicke       - Speaker & PCjr sound support, AdLib work
        Chris Page            - Return to launcher, savestate improvements,
                                leak fixes, ... (GSoC 2008 task)
        Robin Watts           - ARM assembly routines for nice speedups on
@@ -330,7 +330,8 @@ Other contributions
   ------------------
      Ori Avtalion          - Subtitle control options in the GUI; BASS GUI
                              fixes
-     Stuart Caie           - Decoders for Simon 1 Amiga data files
+     Stuart Caie           - Decoders for Amiga and AtariST data files (AGOS
+                             engine)
      Paolo Costabel        - PSP port contributions
      Thierry Crozat        - Support for Broken Sword 1 Macintosh version
      Martin Doucha         - CinE engine objectification
