--- a/AUTHORS
+++ b/AUTHORS
@@ -6,10 +6,9 @@ Residual Team
 
   Engine Teams
   ------------
-    Grim Team:
+    Grim:
        James Brown           - Core developer
        Pawel Kolodziejski    - Core developer. SMUSH, iMUSE implemention
-
 
     Grim Contributors:
        If you have contributed to this engine then you deserve to be on this
@@ -30,42 +29,41 @@ Residual Team
        Pino Toscano          - Debian GNU/Linux package files
        Lionel Ulmer          - OpenGL optimisations
 
+ScummVM code
+************
+   Residual use some ScummVM common code. Copyrights for this code belongs to
+   persons listed below. If you are missed in this list contact us and we'll
+   add you.
 
-  ScummVM code
-  ------------
-     Residual use some ScummVM common code. Copyrights for this code belongs
-     to persons listed below. If you are missed in this list contact us and
-     we'll add you.
-
-     Torbjorn Andersson   
-     Chris Apers          
-     Bertrand Augereau    
-     James Brown          
-     Jamieson Christian   
-     Robert Goeffringmann 
-     Jonathan Gray        
-     Vincent Hamm         
-     Ruediger Hanke       
-     Max Horn             
-     Filippos Karapetis   
-     Oliver Kiehl         
-     Pawel Kolodziejski   
-     Andrew Kurushin      
-     Claudio Matsuoka     
-     Gregory Montoir      
-     Kostas Nakos         
-     Willem Jan Palenstijn
-     Lars Persson         
-     Kari Salminen        
-     Eugene Sandulenko    
-     Johannes Schickel    
-     Ludvig Strigeus      
-     Lionel Ulmer         
-     Jordi Vilalta        
-     Robin Watts          
-     agent-q              
-     arisme               
-     peres                
+   Torbjorn Andersson   
+   Chris Apers          
+   Bertrand Augereau    
+   James Brown          
+   Jamieson Christian   
+   Robert Goeffringmann 
+   Jonathan Gray        
+   Vincent Hamm         
+   Ruediger Hanke       
+   Max Horn             
+   Filippos Karapetis   
+   Oliver Kiehl         
+   Pawel Kolodziejski   
+   Andrew Kurushin      
+   Claudio Matsuoka     
+   Gregory Montoir      
+   Kostas Nakos         
+   Willem Jan Palenstijn
+   Lars Persson         
+   Kari Salminen        
+   Eugene Sandulenko    
+   Johannes Schickel    
+   Ludvig Strigeus      
+   Lionel Ulmer         
+   Jordi Vilalta        
+   Robin Watts          
+   agent-q              
+   arisme               
+   peres                
 
 Special thanks to
 *****************
