--- a/tools/README
+++ b/tools/README
@@ -51,3 +51,9 @@ md5table
     Used to convert scumm-md5.txt into a SCUMM header file, or alternatively
     PHP code for our website.
 
+create_kyradat
+--------------
+    Extracts various static data from the original game executables. This includes
+    room tables in kyra1, various hardcoded language strings in both kyra1 and kyra2,
+    script data for the sequence players of kyra1 and kyra2 and other static data.
+    This tool is used to create the kyra.dat file.
