--- a/NEWS
+++ b/NEWS
@@ -24,6 +24,9 @@ For a more comprehensive changelog for the latest experimental SVN code, see:
    - Dropped support for playing cutscene sound without the video.
    - Added support for the PlayStation version.
 
+ KYRA:
+   - Added support for PC Speaker based music and sound effects.
+
 0.13.1 (2009-04-27)    
  AGOS:
     - Fixed crash after OmniTV video is played in The Feeble Files
