--- a/NEWS
+++ b/NEWS
@@ -31,6 +31,9 @@ For a more comprehensive changelog for the latest experimental SVN code, see:
  KYRA:
    - Added support for PC Speaker based music and sound effects.
 
+ New Ports:
+   - Added GP2X Wiz port.
+
 0.13.1 (2009-04-27)    
  AGOS:
     - Fixed crash after OmniTV video is played in The Feeble Files
